fix: images alignment

--- a/src/components/Facilities/FacilitiesItems/FacilitiesItems.module.css
+++ b/src/components/Facilities/FacilitiesItems/FacilitiesItems.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   gap: 24px;
 
   width: 100%;
@@ -28,8 +28,6 @@
     .container img {
     height: 72px;
     width: 72px;
-
-    object-fit: cover;
   }
 }
 
